layout completed for shopping cart step by step

--- a/public/sources/shopping_cart.html
+++ b/public/sources/shopping_cart.html
@@ -632,8 +632,10 @@
       </div>
     </div>
   </section>
+    <!-- Main Container -->
+
+
    <!-- Footer -->
-  
    <footer>
       <div class="footer-newsletter">
         <div class="container">
@@ -834,7 +836,6 @@
     </footer>
     <a href="#" class="totop"> </a>
   </div>
-
   <!-- End Footer -->
 
   <!-- JS -->
